Remove unneeded #define POSIX
* src/s/gnu-linux.h, src/s/sol2-6.h: No longer define POSIX,
unused since 2011-01-17 change to systty.h.

* admin/CPP-DEFINES: Related edit.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
+	* s/gnu-linux.h, s/sol2-6.h: No longer define POSIX,
+	unused since 2011-01-17 change to systty.h.
+
 	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/darwin.h, s/gnu-linux.h:
 	* s/hpux10-20.h, s/template.h, s/usg5-4-common.h:
 	Move HAVE_PTYS and HAVE_SOCKETS to configure.
