--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-12  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (NARROWPROTO): Move here from src/s.
+
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (INTERRUPT_INPUT): Move here from src/s.
