--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-12  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (NO_MATHERR): Unconditionally define for Darwin;
+	as src/s/darwin.h used to.
+
 	* configure.ac (NARROWPROTO): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
