Move NO_ABORT from src/s to configure
* configure.ac (NO_ABORT): Move here from src/s.

* src/s/darwin.h (NO_ABORT): Let configure set it.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,6 @@
 2012-07-12  Glenn Morris  <rgm@gnu.org>
 
-	* s/darwin.h (NO_MATHERR): Let configure set it.
+	* s/darwin.h (NO_ABORT, NO_MATHERR): Let configure set it.
 
 	* s/bsd-common.h, s/cygwin.h, s/gnu-linux.h, s/irix6-5.h:
 	* s/template.h: Move NARROWPROTO to configure.
