--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* configure.ac (NO_MATHERR): Unconditionally define for Darwin;
 	as src/s/darwin.h used to.
 
-	* configure.ac (NARROWPROTO): Move here from src/s.
+	* configure.ac (NARROWPROTO, NO_ABORT): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
