Move some AIX defines from src/s to configure
* configure.ac (BROKEN_FIONREAD, BROKEN_SIGAIO, BROKEN_SIGPOLL)
(BROKEN_SIGPTY): Move here from src/s.

* src/s/aix4-2.h (BROKEN_FIONREAD, BROKEN_SIGAIO, BROKEN_SIGPTY)
(BROKEN_SIGPOLL): Let configure set them.

* src/s/syssignal.h: Comment fix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	* configure.ac (NO_MATHERR): Unconditionally define for Darwin;
 	as src/s/darwin.h used to.
 
-	* configure.ac (NARROWPROTO, NO_ABORT): Move here from src/s.
+	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_FIONREAD, BROKEN_SIGAIO):
+	(BROKEN_SIGPOLL, BROKEN_SIGPTY): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
