Move more stuff from src/s to configure
* configure.ac (PREFER_VSUSP, RUN_TIME_REMAP, SETPGRP_RELEASES_CTTY)
(TAB3, TABDLY, RUN_TIME_REMAP, XOS_NEEDS_TIME_H): Move here from src/s.

* src/s/bsd-common.h, src/s/darwin.h: Move TAB3 to configure.

* src/s/hpux10-20.h, src/s/sol2-6.h: Move XOS_NEEDS_TIME_H to configure.

* src/s/irix6-5.h (SETPGRP_RELEASES_CTTY, PREFER_VSUSP):
* src/s/hpux10-20.h (RUN_TIME_REMAP):
* src/s/bsd-common.h (TABDLY): Move to configure.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,10 @@
 	* configure.ac (NO_MATHERR): Unconditionally define for Darwin;
 	as src/s/darwin.h used to.
 
-	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_FIONREAD, BROKEN_SIGAIO):
-	(BROKEN_SIGPOLL, BROKEN_SIGPTY): Move here from src/s.
+	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_FIONREAD, BROKEN_SIGAIO)
+	(BROKEN_SIGPOLL, BROKEN_SIGPTY, PREFER_VSUSP, RUN_TIME_REMAP)
+	(SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP
+	(XOS_NEEDS_TIME_H): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
