--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,10 @@
 	* configure.ac (NO_MATHERR): Unconditionally define for Darwin;
 	as src/s/darwin.h used to.
 
-	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_FIONREAD, BROKEN_SIGAIO)
-	(BROKEN_SIGPOLL, BROKEN_SIGPTY, PREFER_VSUSP, RUN_TIME_REMAP)
-	(SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP
+	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_GET_CURRENT_DIR_NAME)
+	(BROKEN_FIONREAD, BROKEN_PTY_READ_AFTER_EAGAIN, BROKEN_SIGAIO)
+	(BROKEN_SIGPOLL, BROKEN_SIGPTY, G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP)
+	(RUN_TIME_REMAP, SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP
 	(XOS_NEEDS_TIME_H): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
