--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-12  Glenn Morris  <rgm@gnu.org>
 
+	* s/cygwin.h (G_SLICE_ALWAYS_MALLOC):
+	* s/freebsd.h (BROKEN_PTY_READ_AFTER_EAGAIN):
 	* s/irix6-5.h (SETPGRP_RELEASES_CTTY, PREFER_VSUSP):
 	* s/hpux10-20.h (RUN_TIME_REMAP):
 	* s/bsd-common.h (TABDLY): Move to configure.
@@ -9,7 +11,7 @@
 	* s/bsd-common.h, s/darwin.h: Move TAB3 to configure.
 
 	* s/aix4-2.h (BROKEN_FIONREAD, BROKEN_SIGAIO, BROKEN_SIGPTY)
-	(BROKEN_SIGPOLL): Let configure set them.
+	(BROKEN_SIGPOLL, BROKEN_GET_CURRENT_DIR_NAME): Let configure set them.
 
 	* s/darwin.h (NO_ABORT, NO_MATHERR): Let configure set them.
 
