Move FIRST_PTY_LETTER, PTY_ITERATION from src/s to configure
* configure.ac (FIRST_PTY_LETTER PTY_ITERATION): Move here from src/s.

* src/s/aix4-2.h, src/s/bsd-common.h, src/s/cygwin.h, src/s/darwin.h:
* src/s/gnu-linux.h, src/s/hpux10-20.h, src/s/irix6-5.h, src/s/template.h:
* src/s/usg5-4-common.h: Move FIRST_PTY_LETTER, PTY_ITERATION to configure.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
 
 	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_GET_CURRENT_DIR_NAME)
 	(BROKEN_FIONREAD, BROKEN_PTY_READ_AFTER_EAGAIN, BROKEN_SIGAIO)
-	(BROKEN_SIGPOLL, BROKEN_SIGPTY, G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP)
+	(BROKEN_SIGPOLL, BROKEN_SIGPTY, FIRST_PTY_LETTER)
+	(G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP, PTY_ITERATION)
 	(RUN_TIME_REMAP, SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP
 	(XOS_NEEDS_TIME_H): Move here from src/s.
 
