--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@
 	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_GET_CURRENT_DIR_NAME)
 	(BROKEN_FIONREAD, BROKEN_PTY_READ_AFTER_EAGAIN, BROKEN_SIGAIO)
 	(BROKEN_SIGPOLL, BROKEN_SIGPTY, FIRST_PTY_LETTER)
-	(G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP, PTY_ITERATION)
+	(G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP, PTY_ITERATION, PTY_OPEN)
 	(RUN_TIME_REMAP, SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP
 	(XOS_NEEDS_TIME_H): Move here from src/s.
 
