Move UNIX98_PTYS from src/s to configure
* configure.ac (UNIX98_PTYS): Move here from src/s.

* src/s/gnu-linux.h (UNIX98_PTYS): Let configure set it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@
 	(BROKEN_SIGPOLL, BROKEN_SIGPTY, FIRST_PTY_LETTER)
 	(G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP, PTY_ITERATION, PTY_OPEN)
 	(PTY_NAME_SPRINTF, PTY_TTY_NAME_SPRINTF, RUN_TIME_REMAP)
-	(SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP)
+	(SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP, UNIX98_PTYS)
 	(XOS_NEEDS_TIME_H): Move here from src/s.
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
