Do not unconditionally define HAVE_XRMSETDATABASE on some systems
* src/s/gnu-linux.h, src/s/hpux10-20.h:
Do not unconditionally define HAVE_XRMSETDATABASE.

Maybe there was a time when this made sense, but in the current tree
it is totally illogical.  This is only used in xterm.c.  If it is set
we call XrmSetDatabase, if not we do something else.  Configure tests
for XrmSetDatabase and sets HAVE_XRMSETDATABASE accordingly.  The only
possibility that is not totally nonsensical is that the system does in
fact have XrmSetDatabase but configure failed to find it (I don't see
how this could happen though...); in which case we should fix the
configure test rather than force the results.  But this is not what
the (vague) comments say was happending.

The gnu-linux piece dates from 1995, the hpux one from 2000.

https://groups.google.com/forum/?fromgroups#!topic/gnu.emacs.bug/H24wEM8Vp9A
From: rainer@displaytech.com (Rainer Malzbender)
Subject: Compiling emacs 20.4 on HP-UX 10.20 with gcc
Date: 2000/02/01
Newsgroups: gnu.emacs.bug

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-12  Glenn Morris  <rgm@gnu.org>
+
+	* s/gnu-linux.h, s/hpux10-20.h:
+	Do not unconditionally define HAVE_XRMSETDATABASE.
+
 2012-07-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (insert_left_trunc_glyphs): Fix incorrect size in
