Move NO_EDITRES from src/s to configure
* configure.ac (NO_EDITRES): Move here from src/s.

* src/s/aix4-2.h, src/s/hpux10-20.h: Let configure set NO_EDITRES.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 
 	* configure.ac (NARROWPROTO, NO_ABORT, BROKEN_GET_CURRENT_DIR_NAME)
 	(BROKEN_FIONREAD, BROKEN_PTY_READ_AFTER_EAGAIN, BROKEN_SIGAIO)
-	(BROKEN_SIGPOLL, BROKEN_SIGPTY, FIRST_PTY_LETTER)
+	(BROKEN_SIGPOLL, BROKEN_SIGPTY, FIRST_PTY_LETTER, NO_EDITRES)
 	(G_SLICE_ALWAYS_MALLOC, PREFER_VSUSP, PTY_ITERATION, PTY_OPEN)
 	(PTY_NAME_SPRINTF, PTY_TTY_NAME_SPRINTF, RUN_TIME_REMAP)
 	(SETPGRP_RELEASES_CTTY, TAB3, TABDLY, RUN_TIME_REMAP, UNIX98_PTYS)
