--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,8 +1,3 @@
-2012-07-12  Glenn Morris  <rgm@gnu.org>
-
-	* s/gnu-linux.h, s/hpux10-20.h:
-	Do not unconditionally define HAVE_XRMSETDATABASE.
-
 2012-07-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (insert_left_trunc_glyphs): Fix incorrect size in
@@ -18,6 +13,11 @@
 	the window margin.  Code moved from display_line.  (Bug#11832)
 
 2012-07-12  Glenn Morris  <rgm@gnu.org>
+
+	* s/aix4-2.h, s/hpux10-20.h: Let configure set NO_EDITRES.
+
+	* s/gnu-linux.h, s/hpux10-20.h:
+	Do not unconditionally define HAVE_XRMSETDATABASE.
 
 	* s/gnu-linux.h (UNIX98_PTYS): Let configure set it.
 
