Move ULIMIT_BREAK_VALUE from src/s to configure
* configure.ac (ULIMIT_BREAK_VALUE): Move here from src/s.

* src/s/gnu-linux.h, src/s/irix6-5.h: Let configure set ULIMIT_BREAK_VALUE.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-13  Glenn Morris  <rgm@gnu.org>
 
+	* s/gnu-linux.h, s/irix6-5.h: Let configure set ULIMIT_BREAK_VALUE.
+
 	* process.c (init_process_emacs): Replace MIN_PTY_KERNEL_VERSION.
 	* s/darwin.h (MIN_PTY_KERNEL_VERSION): Remove single-use macro.
 
