--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-07-13  Glenn Morris  <rgm@gnu.org>
 
-	* configure.ac (ULIMIT_BREAK_VALUE): Move here from src/s.
+	* configure.ac (NSIG_MINIMUM, ULIMIT_BREAK_VALUE):
+	Move here from src/s.
 
 2012-07-12  Glenn Morris  <rgm@gnu.org>
 
