Give permanent-local property to per-buffer variables without defaults.
* doc/emacs/custom.texi (Examining): Update C-h v message.

* lisp/bindings.el: Assign a non-nil permanent-local property to
per-buffer variables which lack a default value.

* lisp/help-fns.el (describe-variable): In the "automatically becomes
local" notice, take note of permanent-local variables.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-13  Chong Yidong  <cyd@gnu.org>
 
+	* custom.texi (Examining): Update C-h v message.
+
 	* buffers.texi (Misc Buffer): Document view-read-only.
 
 2012-07-07  Chong Yidong  <cyd@gnu.org>
