--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-13  Juanma Barranquero  <lekktu@gmail.com>
+
+	* loadup.el (top): Remove bogus `if' choice (brought by revno:88805).
+
 2012-07-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* progmodes/sql.el (sql-comint): Suppress the check for program on
