--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-13  Juanma Barranquero  <lekktu@gmail.com>
 
+	* bindings.el (top): Use `mapc' instead of `mapcar'.
+
 	* loadup.el (top): Remove bogus `if' choice (brought by revno:88805).
 
 2012-07-13  Michael Albinus  <michael.albinus@gmx.de>
